# bag_of_holding

./: .dockerignore  Cargo.toml  Dockerfile  README.md  fly.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  security.yml
crates/abilities/: Cargo.toml
crates/abilities/src/: lib.rs
crates/abilities/tests/: integration_test.rs
crates/alignments/: Cargo.toml
crates/alignments/src/: lib.rs
crates/character/: Cargo.toml
crates/character/src/: lib.rs
crates/character/tests/: integration_test.rs
crates/characters/: Cargo.toml
crates/characters/src/: lib.rs
crates/characters/tests/: integration_test.rs
crates/damage/: Cargo.toml
crates/damage/src/: lib.rs
crates/deities/: Cargo.toml
crates/deities/src/: bugbear.rs  celtic.rs  dragon.rs  dragonlance.rs  drow.rs  duergar.rs  dwarven.rs  eberron.rs  egyptian.rs  elven.rs  forgotten_realms.rs  giant.rs  gnomish.rs  goblin.rs  greek.rs  greyhawk.rs  halfling.rs  kobold.rs  lib.rs  lizardfolk.rs  norse.rs  orc.rs
crates/deities/tests/: integration_test.rs
crates/descriptions/: Cargo.toml
crates/descriptions/src/: lib.rs
crates/dice/: Cargo.toml
crates/dice/src/: lib.rs
crates/dice/tests/: integration_test.rs
crates/features/: Cargo.toml
crates/features/src/: lib.rs
crates/features/tests/: integration_test.rs
crates/languages/: Cargo.toml
crates/languages/src/: lib.rs
crates/languages/tests/: integration_test.rs
crates/names/: Cargo.toml
crates/names/src/: bugbear.rs  dragonborn.rs  duergar.rs  dwarf.rs  elf.rs  gith.rs  githyanki.rs  githzerai.rs  gnome.rs  goblin.rs  goliath.rs  half_elf.rs  half_orc.rs  halfling.rs  hobgoblin.rs  human.rs  kenku.rs  kobold.rs  lib.rs  lizardfolk.rs  orc.rs  tabaxi.rs  tiefling.rs  triton.rs  yuan_ti.rs
crates/names/tests/: integration_test.rs
crates/races/: Cargo.toml
crates/races/src/: dragonborn.rs  lib.rs
crates/races/tests/: integration_test.rs
crates/rand_utils/: Cargo.toml
crates/rand_utils/src/: lib.rs
crates/sizes/: Cargo.toml
crates/sizes/src/: lib.rs
crates/sources/: Cargo.toml
crates/sources/src/: lib.rs
crates/speeds/: Cargo.toml
crates/speeds/src/: lib.rs
src/: abilities.rs  alignments.rs  characters.rs  deities.rs  dice.rs  lib.rs  main.rs  metrics.rs  names.rs  sizes.rs
tests/: dice.rs
tests/api/: abilities.rs  alignments.rs  characters.rs  deities.rs  dice.rs  main.rs  names.rs  sizes.rs
