# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[package]
name = "bag_of_holding"
version.workspace = true
edition.workspace = true

[workspace.dependencies]
abilities = { path = "./crates/abilities" }
alignments = { path = "./crates/alignments" }
anyhow = { version = "1.0.66", features = ["backtrace"] }
axum = { version = "0.5.17", features = [
    "headers",
    "http2",
    "multipart",
    "ws",
] }
axum-extra = { version = "0.3.7", features = [
    "cookie-private",
    "cookie-signed",
    "erased-json",
    "spa",
    "typed-routing",
] }
axum-macros = "0.2.3"
axum-server = { version = "0.4.3", features = ["tls-rustls"] }
characters = { path = "./crates/characters" }
clap = { version = "4.0.18", features = ["derive", "env"] }
deities = { path = "./crates/deities" }
derive_more = "0.99.17"
dice = { path = "./crates/dice" }
enum_dispatch = "0.3.8"
features = { path = "./crates/features" }
futures = "0.3.25"
hyper = { version = "0.14.22", features = ["full"] }
itertools = "0.10.5"
languages = { path = "./crates/languages" }
metrics = "0.20.1"
metrics-exporter-prometheus = "0.11.0"
mime = "0.3.16"
names = { path = "./crates/names" }
once_cell = "1.16.0"
races = { path = "./crates/races" }
rand = "0.8.5"
rand_pcg = "0.3.1"
rand_utils = { path = "./crates/rand_utils" }
sentry = { version = "0.27.0", default-features = false, features = [
    "anyhow",
    "backtrace",
    "contexts",
    "panic",
    "reqwest",
    "rustls",
    "test",
    "tower",
    "tracing",
] }
sentry-tower = { version = "0.27.0", features = ["http"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
sizes = { path = "./crates/sizes" }
sources = { path = "./crates/sources" }
statrs = "0.16.0"
strum = { version = "0.24.1", features = ["derive"] }
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.3.4", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[dependencies]
abilities.workspace = true
alignments.workspace = true
anyhow.workspace = true
axum.workspace = true
axum-extra.workspace = true
axum-macros.workspace = true
axum-server.workspace = true
characters.workspace = true
clap.workspace = true
deities.workspace = true
dice.workspace = true
futures.workspace = true
hyper.workspace = true
itertools.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
mime.workspace = true
names.workspace = true
once_cell.workspace = true
rand.workspace = true
rand_utils.workspace = true
sentry.workspace = true
sentry-tower.workspace = true
serde.workspace = true
serde_json.workspace = true
sizes.workspace = true
strum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
statrs.workspace = true

[profile.release]
lto = "thin"
