# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[package]
name = "bag_of_holding"
version.workspace = true
edition.workspace = true

[workspace.dependencies]
abilities = { path = "./crates/abilities" }
alignments = { path = "./crates/alignments" }
anyhow = { version = "1.0.80", features = ["backtrace"] }
axum = { version = "0.7.4", features = [
    "http2",
    "macros",
    "multipart",
    "ws",
] }
axum-extra = { version = "0.9.2", features = [
    "erased-json",
    "form",
    "query",
    "typed-routing",
] }
axum-server = { version = "0.6.0", features = ["tls-rustls"] }
characters = { path = "./crates/characters" }
clap = { version = "4.5.1", features = ["derive", "env"] }
deities = { path = "./crates/deities" }
derive_more = "0.99.17"
descriptions = { path = "./crates/descriptions" }
dice = { path = "./crates/dice" }
enum_dispatch = "0.3.12"
futures = "0.3.30"
http-body-util = "0.1.0"
hyper = { version = "1.1.0", features = ["full"] }
hyper-util = { version = "0.1.3", features = ["full"] }
itertools = "0.12.1"
metrics = "0.22.1"
metrics-exporter-prometheus = "0.13.1"
mime = "0.3.17"
names = { path = "./crates/names" }
once_cell = "1.19.0"
races = { path = "./crates/races" }
rand = "0.8.5"
rand_pcg = "0.3.1"
rand_utils = { path = "./crates/rand_utils" }
sentry = { version = "0.32.2", default-features = false, features = [
    "anyhow",
    "backtrace",
    "contexts",
    "panic",
    "reqwest",
    "rustls",
    "test",
    "tower",
    "tower-http",
    "tracing",
] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
sizes = { path = "./crates/sizes" }
sources = { path = "./crates/sources" }
statrs = "0.16.0"
strum = { version = "0.25.0", features = ["derive"] }
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dependencies]
abilities.workspace = true
alignments.workspace = true
anyhow.workspace = true
axum.workspace = true
axum-extra.workspace = true
axum-server.workspace = true
characters.workspace = true
clap.workspace = true
deities.workspace = true
descriptions.workspace = true
dice.workspace = true
futures.workspace = true
hyper.workspace = true
itertools.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
mime.workspace = true
names.workspace = true
once_cell.workspace = true
rand.workspace = true
rand_utils.workspace = true
sentry.workspace = true
serde.workspace = true
serde_json.workspace = true
sizes.workspace = true
strum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
http-body-util.workspace = true
hyper-util.workspace = true
statrs.workspace = true

[profile.release]
lto = "thin"
