[package]
name = "abilities"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dice = { path = "../dice" }
itertools = "0.10.3"
metrics = "0.19.0"
rand = "0.8.5"
serde = { version = "1.0.137", features = ["derive"] }
strum = { version = "0.24.0", features = ["derive"] }
tracing = "0.1.35"

[dev-dependencies]
rand_utils = { path = "../rand_utils" }
statrs = "0.15.0"
