[package]
name = "alignments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.3"
metrics = "0.20.1"
rand = "0.8.5"
rand_utils = { path = "../rand_utils" }
serde = { version = "1.0.144", features = ["derive"] }
strum = { version = "0.24.1", features = ["derive"] }
tracing = "0.1.36"

[dev-dependencies]
statrs = "0.16.0"
