[package]
name = "characters"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abilities = { path = "../abilities" }
damage = { path = "../damage" }
metrics = "0.20.1"
races = { path = "../races" }
rand = "0.8.5"
serde = { version = "1.0.143", features = ["derive"] }
sizes = { path = "../sizes" }
sources = { path = "../sources" }
speeds = { path = "../speeds" }
strum = { version = "0.24.1", features = ["derive"] }
thiserror = "1.0.32"
tracing = "0.1.36"

[dev-dependencies]
rand_utils = { path = "../rand_utils" }
serde_json = "1.0.83"
