[package]
name = "characters"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abilities.workspace = true
alignments.workspace = true
damage.workspace = true
metrics.workspace = true
races.workspace = true
rand.workspace = true
serde.workspace = true
sizes.workspace = true
sources.workspace = true
speeds.workspace = true
strum.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
rand_utils.workspace = true
serde_json.workspace = true
