[package]
name = "deities"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
metrics = "0.20.1"
rand = "0.8.5"
rand_utils = { path = "../rand_utils" }
serde = { version = "1.0.145", features = ["derive"] }
strum = { version = "0.24.1", features = ["derive"] }
tracing = "0.1.36"
