[package]
name = "deities"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alignments.workspace = true
metrics.workspace = true
rand.workspace = true
rand_utils.workspace = true
serde.workspace = true
strum.workspace = true
tracing.workspace = true
