[package]
name = "dice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.3"
metrics = "0.18.1"
rand = "0.8.5"
serde = { version = "1.0.136", features = ["derive"] }
strum = { version = "0.24.0", features = ["derive"] }
tracing = "0.1.32"

[dev-dependencies]
rand_pcg = "0.3.1"
