[package]
name = "languages"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more.workspace = true
rand.workspace = true
rand_utils.workspace = true
serde.workspace = true
strum.workspace = true
