[package]
name = "names"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
metrics = "0.19.0"
rand = "0.8.5"
serde = { version = "1.0.138", features = ["derive"] }
strum = { version = "0.24.1", features = ["derive"] }
tracing = "0.1.35"

[dev-dependencies]
rand_utils = { path = "../rand_utils" }
