[package]
name = "names"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
metrics.workspace = true
rand.workspace = true
serde.workspace = true
strum.workspace = true
tracing.workspace = true

[dev-dependencies]
rand_utils.workspace = true
