[package]
name = "races"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
damage = { path = "../damage" }
enum_dispatch = "0.3.8"
names = { path = "../names" }
metrics = "0.20.1"
rand = "0.8.5"
serde = { version = "1.0.144", features = ["derive"] }
sizes = { path = "../sizes" }
sources = { path = "../sources" }
speeds = { path = "../speeds" }
strum = { version = "0.24.1", features = ["derive"] }
tracing = "0.1.36"

[dev-dependencies]
itertools = "0.10.3"
rand_utils = { path = "../rand_utils" }
