[package]
name = "races"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deities.workspace = true
enum_dispatch.workspace = true
features.workspace = true
languages.workspace = true
names.workspace = true
metrics.workspace = true
rand.workspace = true
serde.workspace = true
sizes.workspace = true
sources.workspace = true
strum.workspace = true
tracing.workspace = true

[dev-dependencies]
itertools.workspace = true
rand_utils.workspace = true
